--- a/app/src/main/res/layout/activity_python_language.xml
+++ b/app/src/main/res/layout/activity_python_language.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/light_blue"
+            android:background="@drawable/tcolor"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:title="PYTHON"
@@ -30,6 +30,8 @@
 
 
         android:layout_height="match_parent"
+        app:layout_anchor="@+id/nestedScrollView"
+        app:layout_anchorGravity="center"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,8 +41,9 @@
 
             <Button
                 android:id="@+id/btnIntroduction"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_width="270dp"
+                android:layout_height="75dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:includeFontPadding="true"
                 android:paddingLeft="0dp"
@@ -56,7 +59,7 @@
                 app:iconSize="30dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/btnComments"
-                app:layout_constraintEnd_toStartOf="@+id/btnSyntax"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline4"
@@ -82,10 +85,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnDataTypes"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnComments"
+                app:layout_constraintStart_toStartOf="@+id/btnSyntax"
                 app:layout_constraintTop_toBottomOf="@+id/btnSyntax"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -109,10 +109,9 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnInputs"
-                app:layout_constraintEnd_toStartOf="@+id/btnVariables"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toEndOf="@+id/btnSyntax"
                 app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -134,12 +133,10 @@
                 app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
-                app:iconSize="40dp"
+                app:iconSize="30dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/btnOperators"
-                app:layout_constraintEnd_toStartOf="@+id/btnDataTypes"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnComments"
                 app:layout_constraintTop_toBottomOf="@+id/btnComments"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -163,10 +160,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnConditionalStatements"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnInputs"
+                app:layout_constraintStart_toStartOf="@+id/btnVariables"
                 app:layout_constraintTop_toBottomOf="@+id/btnVariables"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -190,10 +184,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnArrays"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnOperators"
+                app:layout_constraintStart_toStartOf="@+id/btnDataTypes"
                 app:layout_constraintTop_toBottomOf="@+id/btnDataTypes"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -203,6 +194,7 @@
                 android:layout_width="130dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
                 android:paddingTop="10dp"
@@ -218,9 +210,7 @@
                 app:iconSize="30dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/btnLoopingStatements"
-                app:layout_constraintEnd_toStartOf="@+id/btnConditionalStatements"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnInputs"
                 app:layout_constraintTop_toBottomOf="@+id/btnInputs"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -244,10 +234,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
-                app:layout_constraintEnd_toStartOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnOperators"
                 app:layout_constraintTop_toBottomOf="@+id/btnOperators"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -271,10 +258,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnLoopingStatements"
+                app:layout_constraintStart_toStartOf="@+id/btnConditionalStatements"
                 app:layout_constraintTop_toBottomOf="@+id/btnConditionalStatements"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -283,7 +267,7 @@
                 android:id="@+id/btnOop"
                 android:layout_width="130dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="450dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
@@ -300,11 +284,8 @@
                 app:iconSize="30dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/guideline5"
-                app:layout_constraintEnd_toEndOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="@+id/btnLoopingStatements"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
-                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintEnd_toEndOf="@+id/btnLoopingStatements"
+                app:layout_constraintTop_toBottomOf="@+id/btnLoopingStatements"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -312,6 +293,7 @@
                 android:id="@+id/btnSyntax"
                 android:layout_width="130dp"
                 android:layout_height="80dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
                 android:paddingTop="10dp"
@@ -326,11 +308,10 @@
                 app:iconPadding="0dp"
                 app:iconSize="30dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnVariables"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintEnd_toStartOf="@+id/btnComments"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnIntroduction"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
