--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,87 +1,109 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="care_fragments.HomeFragment" >
+    android:fillViewport="true">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="89dp"
-        android:layout_height="92dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="137dp"
+        android:layout_height="135dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/circlebg"
         android:contentDescription="@string/codey_image"
         android:src="@drawable/codey_main_cut"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.003"
-        app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/callout_background"
-        android:fontFamily="@font/lionel"
-        android:text="@string/to_continue_kindly_choose_your_desired_programming_language_that_you_want_to_learn_and_let_s_get_started"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.346"
-        tools:ignore="TextSizeCheck" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="352dp"
+            android:layout_height="110dp"
+            android:layout_below="@+id/imageView5"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+
+            android:layout_marginTop="16dp"
+            android:text="@string/to_continue_kindly_choose_your_desired_programming_language_that_you_want_to_learn_and_let_s_get_started"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5"
+            tools:ignore="TextSizeCheck" />
+
+        <ImageButton
+            android:id="@+id/btnPython"
+            android:layout_width="275dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ww"
+            android:contentDescription="@string/python_button"
+            android:elevation="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="100dp"
+            android:scaleType="fitEnd"
+            app:layout_constraintEnd_toEndOf="@+id/btnJava"
+            app:layout_constraintStart_toStartOf="@+id/btnJava"
+            app:layout_constraintTop_toBottomOf="@+id/btnJava"
+            app:srcCompat="@drawable/python_icon" />
+
 
     <ImageButton
+
+
         android:id="@+id/btnJava"
-        android:layout_width="318dp"
-        android:layout_height="110dp"
+        android:layout_width="272dp"
+        android:layout_height="97dp"
+        android:layout_marginStart="15dp"
+
+        android:layout_marginTop="16dp"
         android:adjustViewBounds="false"
-        android:background="@drawable/smooth_image_button"
+        android:background="@drawable/ww"
         android:contentDescription="@string/java_button"
         android:cropToPadding="false"
+        android:elevation="10dp"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
+        android:paddingEnd="100dp"
+        android:paddingBottom="15dp"
+        android:scaleType="fitEnd"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.414"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.04"
-        app:srcCompat="@drawable/java_icon" />
+        app:srcCompat="@drawable/jav_icon" />
 
-    <ImageButton
-        android:id="@+id/btnC"
-	    android:layout_width="318dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/smooth_image_button"
-        android:contentDescription="@string/c_button"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="@+id/btnJava"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnJava"
-        app:layout_constraintTop_toBottomOf="@+id/btnPython"
-        app:srcCompat="@drawable/csharp_icon" />
+        <ImageButton
+            android:id="@+id/btnC"
+            android:layout_width="275dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ww"
+            android:contentDescription="@string/c_button"
+            android:elevation="10dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
+            app:layout_constraintEnd_toEndOf="@+id/btnPython"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/btnPython"
+            app:layout_constraintTop_toBottomOf="@+id/btnPython"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/csharp_icon" />
 
-    <ImageButton
-        android:id="@+id/btnPython"
-        android:layout_width="318dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/smooth_image_button"
-        android:contentDescription="@string/python_button"
-        android:paddingTop="10dp"
-        android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="@+id/btnJava"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnJava"
-        app:layout_constraintTop_toBottomOf="@+id/btnJava"
-        app:srcCompat="@drawable/python_icon" />
-    <androidx.constraintlayout.widget.Guideline
+        <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="15dp" />
+        app:layout_constraintGuide_begin="0dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_horizontal2"
@@ -108,6 +130,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_end="15dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
 
 
