--- a/app/src/main/res/layout/activity_csharp_language.xml
+++ b/app/src/main/res/layout/activity_csharp_language.xml
@@ -15,8 +15,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/light_blue"
+            android:background="@drawable/tcolor"
             android:minHeight="?attr/actionBarSize"
+            android:textAlignment="center"
             android:theme="?attr/actionBarTheme"
             app:title="C#"
             app:titleTextColor="#fff" />
@@ -26,6 +27,8 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_anchor="@+id/nestedScrollView"
+        app:layout_anchorGravity="center"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -35,8 +38,9 @@
 
             <Button
                 android:id="@+id/btnIntroduction"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_width="270dp"
+                android:layout_height="75dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:includeFontPadding="true"
                 android:paddingLeft="0dp"
@@ -51,9 +55,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnComments"
-                app:layout_constraintEnd_toStartOf="@+id/btnSyntax"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline4"
                 app:strokeColor="#AAAAAA"
@@ -78,11 +80,114 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnDataTypes"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintEnd_toStartOf="@+id/btnInputs"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnComments"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/btnSyntax"
+                app:strokeColor="#AAAAAA"
+                app:strokeWidth="0.1dp" />
+
+            <Button
+                android:id="@+id/btnSyntax"
+                android:layout_width="130dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#FFFFFF"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingRight="0dp"
+                android:paddingBottom="0dp"
+                android:shadowColor="#000000"
+                android:text="@string/_2_syntax"
+                android:textColor="#000000"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/csharp_icon_new"
+                app:iconGravity="top"
+                app:iconPadding="0dp"
+                app:iconSize="40dp"
+                app:iconTint="#000000"
+                app:layout_constraintEnd_toStartOf="@+id/btnComments"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
+                app:strokeColor="#AAAAAA"
+                app:strokeWidth="0.1dp" />
+
+            <Button
+                android:id="@+id/btnDataTypes"
+                android:layout_width="130dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#FFFFFF"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingRight="0dp"
+                android:paddingBottom="0dp"
+                android:shadowColor="#000000"
+                android:text="@string/_6_data_types"
+                android:textColor="#000000"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/csharp_icon_new"
+                app:iconGravity="top"
+                app:iconPadding="0dp"
+                app:iconSize="40dp"
+                app:iconTint="#000000"
+                app:layout_constraintEnd_toStartOf="@+id/btnOperators"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/btnVariables"
+                app:strokeColor="#AAAAAA"
+                app:strokeWidth="0.1dp" />
+
+            <Button
+                android:id="@+id/btnArrays"
+                android:layout_width="130dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#FFFFFF"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingRight="0dp"
+                android:paddingBottom="0dp"
+                android:shadowColor="#000000"
+                android:text="@string/_10_arrays"
+                android:textColor="#000000"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/csharp_icon_new"
+                app:iconGravity="top"
+                app:iconPadding="0dp"
+                app:iconSize="40dp"
+                app:iconTint="#000000"
+                app:layout_constraintEnd_toStartOf="@+id/btnOop"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/btnConditionalStatements"
+                app:strokeColor="#AAAAAA"
+                app:strokeWidth="0.1dp" />
+
+            <Button
+                android:id="@+id/btnConditionalStatements"
+                android:layout_width="130dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#FFFFFF"
+                android:paddingLeft="0dp"
+                android:paddingTop="0dp"
+                android:paddingRight="0dp"
+                android:paddingBottom="0dp"
+                android:shadowColor="#000000"
+                android:text="@string/_8_conditional_statements"
+                android:textColor="#000000"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/csharp_icon_new"
+                app:iconGravity="top"
+                app:iconPadding="0dp"
+                app:iconSize="40dp"
+                app:iconTint="#000000"
+                app:layout_constraintEnd_toStartOf="@+id/btnLoopingStatements"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/btnDataTypes"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -105,10 +210,9 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnInputs"
-                app:layout_constraintEnd_toStartOf="@+id/btnVariables"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toEndOf="@+id/btnSyntax"
                 app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -133,64 +237,10 @@
                 app:iconSize="40dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/btnOperators"
-                app:layout_constraintEnd_toStartOf="@+id/btnDataTypes"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toEndOf="@+id/btnVariables"
                 app:layout_constraintTop_toBottomOf="@+id/btnComments"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
-
-            <Button
-                android:id="@+id/btnDataTypes"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
-                android:paddingLeft="0dp"
-                android:paddingTop="0dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="0dp"
-                android:shadowColor="#000000"
-                android:text="@string/_6_data_types"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/csharp_icon_new"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="40dp"
-                app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnConditionalStatements"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnInputs"
-                app:layout_constraintTop_toBottomOf="@+id/btnVariables"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
-
-            <Button
-                android:id="@+id/btnConditionalStatements"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
-                android:paddingLeft="0dp"
-                android:paddingTop="0dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="0dp"
-                android:shadowColor="#000000"
-                android:text="@string/_8_conditional_statements"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/csharp_icon_new"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="40dp"
-                app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnArrays"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnOperators"
-                app:layout_constraintTop_toBottomOf="@+id/btnDataTypes"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -213,10 +263,9 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnLoopingStatements"
-                app:layout_constraintEnd_toStartOf="@+id/btnConditionalStatements"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toEndOf="@+id/btnDataTypes"
                 app:layout_constraintTop_toBottomOf="@+id/btnInputs"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -240,38 +289,10 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
-                app:layout_constraintEnd_toStartOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/btnOperators"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
-
-            <Button
-                android:id="@+id/btnArrays"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="#FFFFFF"
-                android:paddingLeft="0dp"
-                android:paddingTop="0dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="0dp"
-                android:shadowColor="#000000"
-                android:text="@string/_10_arrays"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/csharp_icon_new"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="40dp"
-                app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnLoopingStatements"
-                app:layout_constraintTop_toBottomOf="@+id/btnConditionalStatements"
+                app:layout_constraintStart_toEndOf="@+id/btnConditionalStatements"
+                app:layout_constraintTop_toBottomOf="@+id/btnOperators"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -279,7 +300,7 @@
                 android:id="@+id/btnOop"
                 android:layout_width="130dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="450dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
@@ -296,37 +317,11 @@
                 app:iconSize="40dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/guideline5"
-                app:layout_constraintEnd_toEndOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="@+id/btnLoopingStatements"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
-                app:layout_constraintVertical_bias="1.0"
-                app:strokeColor="#AAAAAA"
-                app:strokeWidth="0.1dp" />
-
-            <Button
-                android:id="@+id/btnSyntax"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:backgroundTint="#FFFFFF"
-                android:paddingLeft="0dp"
-                android:paddingTop="0dp"
-                android:paddingRight="0dp"
-                android:paddingBottom="0dp"
-                android:shadowColor="#000000"
-                android:text="@string/_2_syntax"
-                android:textColor="#000000"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/csharp_icon_new"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
-                app:iconSize="40dp"
-                app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnVariables"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnIntroduction"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
+                app:layout_constraintStart_toEndOf="@+id/btnArrays"
+                app:layout_constraintTop_toBottomOf="@+id/btnLoopingStatements"
+                app:layout_constraintVertical_bias="0.0"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -362,7 +357,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="63dp"
                 android:layout_height="109dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/codey_image"
                 android:src="@drawable/codey_c"
@@ -374,6 +369,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
                 android:fontFamily="@font/lionel"
                 android:text="Click a lesson that you want to begin and I will guide you throughout this study!"
                 android:textColor="#000000"
