--- a/app/src/main/res/layout/activity_java_language.xml
+++ b/app/src/main/res/layout/activity_java_language.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/light_blue"
+            android:background="@drawable/tcolor"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:title="JAVA"
@@ -35,8 +35,9 @@
 
             <Button
                 android:id="@+id/btnIntroduction"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
+                android:layout_width="270dp"
+                android:layout_height="75dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:includeFontPadding="true"
                 android:paddingLeft="0dp"
@@ -51,9 +52,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnComments"
-                app:layout_constraintEnd_toStartOf="@+id/btnSyntax"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline4"
                 app:strokeColor="#AAAAAA"
@@ -78,10 +77,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnDataTypes"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnComments"
+                app:layout_constraintStart_toStartOf="@+id/btnSyntax"
                 app:layout_constraintTop_toBottomOf="@+id/btnSyntax"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -105,10 +101,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnInputs"
-                app:layout_constraintEnd_toStartOf="@+id/btnVariables"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnIntroduction"
                 app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -132,10 +125,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOperators"
-                app:layout_constraintEnd_toStartOf="@+id/btnDataTypes"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnComments"
                 app:layout_constraintTop_toBottomOf="@+id/btnComments"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -159,10 +149,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnConditionalStatements"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnInputs"
+                app:layout_constraintStart_toStartOf="@+id/btnVariables"
                 app:layout_constraintTop_toBottomOf="@+id/btnVariables"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -186,10 +173,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnArrays"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnOperators"
+                app:layout_constraintStart_toStartOf="@+id/btnDataTypes"
                 app:layout_constraintTop_toBottomOf="@+id/btnDataTypes"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -213,10 +197,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnLoopingStatements"
-                app:layout_constraintEnd_toStartOf="@+id/btnConditionalStatements"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnInputs"
                 app:layout_constraintTop_toBottomOf="@+id/btnInputs"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -240,10 +221,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
-                app:layout_constraintEnd_toStartOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintEnd_toEndOf="@+id/btnOperators"
                 app:layout_constraintTop_toBottomOf="@+id/btnOperators"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -267,10 +245,7 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnOop"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnLoopingStatements"
+                app:layout_constraintStart_toStartOf="@+id/btnConditionalStatements"
                 app:layout_constraintTop_toBottomOf="@+id/btnConditionalStatements"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
@@ -279,7 +254,7 @@
                 android:id="@+id/btnOop"
                 android:layout_width="130dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="450dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
@@ -296,11 +271,8 @@
                 app:iconSize="40dp"
                 app:iconTint="#000000"
                 app:layout_constraintBottom_toTopOf="@+id/guideline5"
-                app:layout_constraintEnd_toEndOf="@+id/btnArrays"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="@+id/btnLoopingStatements"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
-                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintEnd_toEndOf="@+id/btnLoopingStatements"
+                app:layout_constraintTop_toBottomOf="@+id/btnLoopingStatements"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
@@ -308,6 +280,7 @@
                 android:id="@+id/btnSyntax"
                 android:layout_width="130dp"
                 android:layout_height="80dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
                 android:paddingTop="0dp"
@@ -322,11 +295,8 @@
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
                 app:iconTint="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnVariables"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btnIntroduction"
-                app:layout_constraintTop_toTopOf="@+id/guideline4"
+                app:layout_constraintStart_toStartOf="@+id/btnIntroduction"
+                app:layout_constraintTop_toBottomOf="@+id/btnIntroduction"
                 app:strokeColor="#AAAAAA"
                 app:strokeWidth="0.1dp" />
 
